fix z-index

--- a/project/_src/layout/layout.less
+++ b/project/_src/layout/layout.less
@@ -36,6 +36,7 @@ html{
   .bg-gradient-anim;
 
   >#main{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
